Logout fix in settings, overflow fix in settings

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Quicksand&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Quicksand&display=swap");
 
 :root {
-
   /*** Colors ***/
   /* #696D7E dark gray
   
@@ -14,28 +12,27 @@
   djunglemist #BEE0D9
   cascade #A5BAB7
   #88ABA9 */
- 
+
   /* kollade färger */
 
-    /* Text colors */
-    --clr-text-dark: #303346;
+  /* Text colors */
+  --clr-text-dark: #303346;
 
   /* --------------- */
-  
- 
+
   --clr-jungle-mist: #b2d7ce;
   --clr-cascade: #96aba9;
   --clr-lightgray: #6a6d80;
   /* andvänds denna? */
   --clr-scarpa-flow: #545767;
-  
+
   --clr-darkgray: #303346;
 
   --clr-pearl-brush: #dfd6d2;
   --clr-pancho: #f0c8b0;
   --clr-powderblue-light: #b5c4cf;
 
-  --clr-off-white: #E8E8E8;
+  --clr-off-white: #e8e8e8;
   /*** Backgrounds + MULTI use ***/
 
   /* Används som main backgrounds färg 
@@ -71,20 +68,15 @@
   /* Orange Ljus */
   --clr-bg-orange-card: #f9d4c1;
 
-
-  
-   /*   Använda denna färgen på alla? lägga som main färg i body = deafult färg? */
+  /*   Använda denna färgen på alla? lägga som main färg i body = deafult färg? */
 
   /* vet inte om vi behöver dessa ViSv 2023-01-05  */
-  
 
   /* **** FONTS ROOT UNDER HÄR ***** */
-  --font-brush: 'Dancing Script', cursive;
-  --font-text: 'Quicksand', sans-serif; 
+  --font-brush: "Dancing Script", cursive;
+  --font-text: "Quicksand", sans-serif;
   --font-main: "Roboto", sans-serif;
   --font-second: "Montserrat";
-  
-  
 }
 
 *,
@@ -98,6 +90,7 @@ html {
 }
 
 body {
+  overflow: hidden;
   background-color: var(--clr-bg);
   color: var(--clr-text-dark);
 }
